Supported using METS-R SIM in docker
1. Provided three examples in Python notebooks.
2. The docker file is currently 4 GB since I am using the Ubuntu-GUI for debugging purposes.

--- a/interactive_example.ipynb
+++ b/interactive_example.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "config = read_run_config(\"configs/run_interactive_NYC_win.json\")"
+    "config = read_run_config(\"configs/run_interactive_NYC_docker.json\")"
    ]
   },
   {
@@ -42,7 +42,37 @@
      "output_type": "stream",
      "text": [
       "No port number specified, find available ports for simulation instances\n",
-      "Waiting until the server is up at ws://localhost:49856\n",
+      "docker run -d --rm --mount src=\"c:\\Users\\ALei\\Documents\\GitHub\\METS-R_HPC\\output\\scenario_0_case_0_seed_42_eco_False_bus_False_share_False_demand_10_taxi_2000_bus_20_10_8\",target=/home/test,type=bind --net=host ennuilei/mets-r_sim  /bin/bash -c \"cd /home/test && /usr/lib/jvm/java-1.8.0-openjdk-amd64/bin/java -Xmx16G -cp /home/Eclipse/plugins/repast.simphony.runtime_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.runtime_2.7.0/lib/*:/home/Eclipse/plugins/repast.simphony.batch_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.batch_2.7.0/lib/*:/home/Eclipse/plugins/repast.simphony.distributed.batch_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.distributed.batch_2.7.0/lib/*:/home/Eclipse/plugins/repast.simphony.core_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.core_2.7.0/lib/*:/home/METS-R_SIM/METS_R/bin:/home/METS-R_SIM/METS_R/lib/*:/home/Eclipse/plugins/repast.simphony.bin_and_src_2.7.0/repast.simphony.bin_and_src.jar:/home/Eclipse/plugins/repast.simphony.essentials_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.gis_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.gis_2.7.0/lib/*:/home/Eclipse/plugins/repast.simphony.sql_2.7.0/bin:/home/Eclipse/plugins/repast.simphony.sql_2.7.0/lib/*:/home/Eclipse/plugins/repast.simphony.scenario_2.7.0/bin: repast.simphony.batch.BatchMain -params /home/METS-R_SIM/METS_R/mets_r.rs/batch_params.xml -interactive /home/METS-R_SIM/METS_R/mets_r.rs \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['40af847523492d18c6d8588b328f551b8a03ec57557cfc613a5d5b4d72a11161']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_sim_dirs(config)\n",
+    "run_simulation_in_docker(config)\n",
+    "# run_simulations_in_background(config)\n",
+    "# connect to the simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting until the server is up at ws://localhost:58850\n",
       "Created all clients!\n"
      ]
     },
@@ -50,23 +80,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sever is active at ws://localhost:49856,  running client..\n",
-      "ws://localhost:49856 : connection opened\n"
+      "Sever is active at ws://localhost:58850,  running client..\n",
+      "ws://localhost:58850 : connection opened\n"
      ]
     }
    ],
    "source": [
-    "prepare_sim_dirs(config)\n",
-    "run_simulations_in_background(config)\n",
-    "# run_simulations_in_background(config)\n",
-    "# connect to the simulation\n",
     "rdcm = HPCRunner(config)\n",
     "sim_client = rdcm.rd_clients[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +119,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1141,7 @@
        " 'TYPE': 'ANS_vehicle'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
